Endpoint for fetching and deleting passengers and driver
