# swagger.json
@@ -543,6 +543,105 @@
           }
         ]
       }
+    },
+    "/api/v1/admin/login": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "autoBody": false,
+        "requestBody": {
+          "required": true,
+          "in": "body",
+          "description": "Route for logi",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/adminLogin"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/adminLogin"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/admin/@all": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "user",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "adminAuth": []
+          }
+        ]
+      }
+    },
+    "/api/v1/admin/user/{user}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "user",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "email",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "adminAuth": []
+          }
+        ]
+      }
     }
   },
   "components": {
@@ -552,6 +651,10 @@
         "scheme": "bearer"
       },
       "driverAuth": {
+        "type": "http",
+        "scheme": "bearer"
+      },
+      "adminAuth": {
         "type": "http",
         "scheme": "bearer"
       }
@@ -829,6 +932,26 @@
         ],
         "xml": {
           "name": "resetPasswordPayload"
+        }
+      },
+      "adminLogin": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "example": "drivelink@gmail.com"
+          },
+          "password": {
+            "type": "string",
+            "example": "drivelink@90"
+          }
+        },
+        "required": [
+          "email",
+          "password"
+        ],
+        "xml": {
+          "name": "adminLogin"
         }
       }
     }
